--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.2.0",
     "dayjs": "^1.11.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "framer-motion": "^10.18.0",
     "mapbox-gl": "^2.15.0",
     "mongoose": "^7.5.2",
     "next": "13.5.1",
     "next-auth": "^4.23.1",
-    "next-cloudinary": "^5.16.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -37,9 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.6",
-    "react-scroll": "^1.8.9",
     "react-select": "^5.8.0",
-    "react-slick": "^0.29.0",
     "tailwindcss": "3.3.3"
   }
 }
